tests/sema/negative/vec_void_element.nv
fn main() : void {
    let xs : vec<void> = vec_new();
    return;
}
